[project]
name = "ai-agents-lab"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "duckduckgo-search>=8.1.1",
    "google-generativeai>=0.8.5",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-google-genai>=2.0.10",
    "openai>=1.95.1",
    "python-dotenv>=1.1.1",
]
